npm init + fontawesome + start main

--- a/index.html
+++ b/index.html
@@ -1,15 +1,5 @@
 <!DOCTYPE html>
 <html lang="fr">
-<<<<<<< Updated upstream
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Ohmyfood! Paris by Julien Penna</title>
-</head>
-<body>
-=======
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -25,14 +15,21 @@
     />
   </head>
   <body>
->>>>>>> Stashed changes
     <header>
-        <h1>ohmyfood</h1>
+      <h1>ohmyfood</h1>
+      <!-- START Section LOCALIZATION -->
+      <div class="localization">
+        <h2>Paris, Belleville</h2>
+      </div>
+      <div class="explore">
+        <h3>Réservez le menu qui vous convient</h3>
+        <p>
+          Découvrez des restaurants d'exception, sélectionnés par nos soins.
+        </p>
+        <button class="btn">Explorez nos restaurants</button>
+      </div>
+      <!-- END Section LOCALIZATION -->
     </header>
-<<<<<<< Updated upstream
-</body>
-</html>
-=======
     <main>
       <section class="operation">
         <h3>Fonctionnement</h3>
@@ -55,4 +52,3 @@
     </main>
   </body>
 </html>
->>>>>>> Stashed changes
