--- a/index.html
+++ b/index.html
@@ -52,6 +52,38 @@
       </section>
       <section class="restaurants">
         <h3>Restaurants</h3>
+        <div class="card-resto">
+          <img src="" alt="Fines tranches de saumon et verdure dans assiette en céramique">
+          <div class="container">
+            <h5>La palette du goût</h5>
+            <p>Ménilmontant</p>
+            <i class="fa-regular fa-heart"></i>
+          </div>
+        </div>
+        <div class="card-resto">
+          <img src="" alt="poisson servi dans son assiette en forme de barque">
+          <div class="container">
+            <h5>La note enchantée</h5>
+            <p>Charonne</p>
+            <i class="fa-regular fa-heart"></i>
+          </div>
+        </div>
+        <div class="card-resto">
+          <img src="" alt="Boulettes de viande dans assiette en céramique blanche">
+          <div class="container">
+            <h5>À la française</h5>
+            <p>Cité Rouge</p>
+            <i class="fa-regular fa-heart"></i>
+          </div>
+        </div>
+        <div class="card-resto">
+          <img src="" alt="viande crue avec crème et légumes feuillus sur une assiette ronde en céramique blanche">
+          <div class="container">
+            <h5>Le délice des sens</h5>
+            <p>Folie-Méricourt</p>
+            <i class="fa-regular fa-heart"></i>
+          </div>
+        </div>
       </section>
     </main>
   </body>
