cards OK img + flex + border-radius added

--- a/index.html
+++ b/index.html
@@ -34,53 +34,73 @@
       <section class="operation">
         <h3>Fonctionnement</h3>
         <div class="steps">
-        <ol>
-          <li>
-            <i class="fa-solid fa-mobile-screen-button"></i>
-            <h4>Choisissez un restaurant</h4>
-          </li>
-          <li>
-            <i class="fa-solid fa-list"></i>
-            <h4>Composez votre menu</h4>
-          </li>
-          <li>
-            <i class="fa-sharp fa-solid fa-store"></i>
-            <h4>Dégustez au restaurant</h4>
-          </li>
-        </ol>
-      </div>
+          <ol>
+            <li>
+              <i class="fa-solid fa-mobile-screen-button"></i>
+              <h4>Choisissez un restaurant</h4>
+            </li>
+            <li>
+              <i class="fa-solid fa-list"></i>
+              <h4>Composez votre menu</h4>
+            </li>
+            <li>
+              <i class="fa-sharp fa-solid fa-store"></i>
+              <h4>Dégustez au restaurant</h4>
+            </li>
+          </ol>
+        </div>
       </section>
       <section class="restaurants">
         <h3>Restaurants</h3>
         <div class="card-resto">
-          <img src="" alt="Fines tranches de saumon et verdure dans assiette en céramique">
+          <img
+            src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+            alt="Fines tranches de saumon et verdure dans assiette en céramique"
+          />
           <div class="container">
-            <h5>La palette du goût</h5>
-            <p>Ménilmontant</p>
+            <div class="resto">
+              <h5>La palette du goût</h5>
+              <p>Ménilmontant</p>
+            </div>
             <i class="fa-regular fa-heart"></i>
           </div>
         </div>
         <div class="card-resto">
-          <img src="" alt="poisson servi dans son assiette en forme de barque">
+          <img
+            src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+            alt="Boulettes de viande dans assiette en céramique blanche"
+          />
           <div class="container">
-            <h5>La note enchantée</h5>
-            <p>Charonne</p>
+            <div class="resto">
+              <h5>La note enchantée</h5>
+              <p>Charonne</p>
+            </div>
             <i class="fa-regular fa-heart"></i>
           </div>
         </div>
         <div class="card-resto">
-          <img src="" alt="Boulettes de viande dans assiette en céramique blanche">
+          <img
+            src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+            alt="viande crue avec crème et légumes feuillus sur une assiette ronde en céramique blanche"
+          />
           <div class="container">
-            <h5>À la française</h5>
-            <p>Cité Rouge</p>
+            <div class="resto">
+              <h5>À la française</h5>
+              <p>Cité Rouge</p>
+            </div>
             <i class="fa-regular fa-heart"></i>
           </div>
         </div>
         <div class="card-resto">
-          <img src="" alt="viande crue avec crème et légumes feuillus sur une assiette ronde en céramique blanche">
+          <img
+            src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+            alt="poisson servi dans son assiette en forme de barque"
+          />
           <div class="container">
-            <h5>Le délice des sens</h5>
-            <p>Folie-Méricourt</p>
+            <div class="resto">
+              <h5>Le délice des sens</h5>
+              <p>Folie-Méricourt</p>
+            </div>
             <i class="fa-regular fa-heart"></i>
           </div>
         </div>
