ol>li replaced by div, check-list added

--- a/index.html
+++ b/index.html
@@ -34,20 +34,18 @@
       <section class="operation">
         <h3>Fonctionnement</h3>
         <div class="steps">
-          <ol>
-            <li>
-              <i class="fa-solid fa-mobile-screen-button"></i>
-              <h4>Choisissez un restaurant</h4>
-            </li>
-            <li>
-              <i class="fa-solid fa-list"></i>
-              <h4>Composez votre menu</h4>
-            </li>
-            <li>
-              <i class="fa-sharp fa-solid fa-store"></i>
-              <h4>Dégustez au restaurant</h4>
-            </li>
-          </ol>
+          <div class="step">
+            <i class="fa-solid fa-mobile-screen-button"></i>
+            <h4>Choisissez un restaurant</h4>
+          </div>
+          <div class="step">
+            <i class="fa-solid fa-list"></i>
+            <h4>Composez votre menu</h4>
+          </div>
+          <div class="step">
+            <i class="fa-sharp fa-solid fa-store"></i>
+            <h4>Dégustez au restaurant</h4>
+          </div>
         </div>
       </section>
       <section class="restaurants">
