--- a/index.html
+++ b/index.html
@@ -16,33 +16,37 @@
   </head>
   <body>
     <header>
+      <nav>
       <h1>ohmyfood</h1>
-      <!-- START Section LOCALIZATION -->
-      <div class="localization">
-        <h2>Paris, Belleville</h2>
-      </div>
-      <div class="explore">
-        <h3>Réservez le menu qui vous convient</h3>
-        <p>
-          Découvrez des restaurants d'exception, sélectionnés par nos soins.
-        </p>
-        <button class="btn">Explorez nos restaurants</button>
-      </div>
-      <!-- END Section LOCALIZATION -->
-    </header>
+    </nav>
+    <!-- <img src="images/logo/ohmyfood.png" alt="logo ohmyfood"> -->
+    <!-- START Section LOCALIZATION -->
+    <div class="localization">
+      <h2><i class="fa-solid fa-location-dot"></i>Paris, Belleville</h2>
+    </div>
+    <div class="explore">
+      <h3>Réservez le menu qui vous convient</h3>
+      <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
+      <button class="btn">Explorez nos restaurants</button>
+    </div>
+    <!-- END Section LOCALIZATION -->
+  </header>
     <main>
       <section class="operation">
         <h3>Fonctionnement</h3>
         <div class="steps">
           <div class="step">
+            <span class="number">1</span>
             <i class="fa-solid fa-mobile-screen-button"></i>
             <h4>Choisissez un restaurant</h4>
           </div>
           <div class="step">
+            <span class="number">2</span>
             <i class="fa-solid fa-list"></i>
             <h4>Composez votre menu</h4>
           </div>
           <div class="step">
+            <span class="number">3</span>
             <i class="fa-sharp fa-solid fa-store"></i>
             <h4>Dégustez au restaurant</h4>
           </div>
@@ -104,5 +108,14 @@
         </div>
       </section>
     </main>
+    <footer>
+      <h6>ohmyfood</h6>
+      <a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a>
+      <a href="#"
+        ><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</a
+      >
+      <a href="#">Mentions légales</a>
+      <a href="#">Contact</a>
+    </footer>
   </body>
 </html>
