folder page + card menu added

--- a/index.html
+++ b/index.html
@@ -17,20 +17,22 @@
   <body>
     <header>
       <nav>
-      <h1>ohmyfood</h1>
-    </nav>
-    <!-- <img src="images/logo/ohmyfood.png" alt="logo ohmyfood"> -->
-    <!-- START Section LOCALIZATION -->
-    <div class="localization">
-      <h2><i class="fa-solid fa-location-dot"></i>Paris, Belleville</h2>
-    </div>
-    <div class="explore">
-      <h3>Réservez le menu qui vous convient</h3>
-      <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
-      <button class="btn">Explorez nos restaurants</button>
-    </div>
-    <!-- END Section LOCALIZATION -->
-  </header>
+        <h1>ohmyfood</h1>
+      </nav>
+      <!-- <img src="images/logo/ohmyfood.png" alt="logo ohmyfood"> -->
+      <!-- START Section LOCALIZATION -->
+      <div class="localization">
+        <h2><i class="fa-solid fa-location-dot"></i>Paris, Belleville</h2>
+      </div>
+      <div class="explore">
+        <h3>Réservez le menu qui vous convient</h3>
+        <p>
+          Découvrez des restaurants d'exception, sélectionnés par nos soins.
+        </p>
+        <button class="btn">Explorez nos restaurants</button>
+      </div>
+      <!-- END Section LOCALIZATION -->
+    </header>
     <main>
       <section class="operation">
         <h3>Fonctionnement</h3>
