--- a/resto-page.html
+++ b/resto-page.html
@@ -17,11 +17,32 @@
   <body>
     <header>
       <nav>
-      <h1>ohmyfood</h1>
-    </nav>
-    <!-- <img src="images/logo/ohmyfood.png" alt="logo ohmyfood"> -->
-  <main>
-  </main>
+        <i class="fa-solid fa-arrow-left"></i>
+        <h1>ohmyfood</h1>
+        <!-- <img src="images/logo/ohmyfood.png" alt="logo ohmyfood"> -->
+      </nav>
+      <img
+        src="images\restaurants\toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+        alt="viande crue avec crème et légumes feuillus sur une assiette ronde en céramique blanche"
+      />
+    </header>
+
+    <div class="menu">
+      <div class="resto-name-fav">
+        <h2>À la française</h2>
+        <i class="fa-regular fa-heart"></i>
+      </div>
+
+      <h3>ENTRÉES</h3>
+      <div class="card-dish-price">
+        <h4>Tartare de poulpe acidulé</h4>
+        <div class="description-price">
+          <p>Aux zestes d'orange</p>
+          <span class="price">25€</span>
+        </div>
+      </div>
+    </div>
+
     <footer>
       <h6>ohmyfood</h6>
       <a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a>
