first dish card OK (without animation)

--- a/resto-page.html
+++ b/resto-page.html
@@ -37,7 +37,7 @@
       <div class="card-dish-price">
         <h4>Tartare de poulpe acidulé</h4>
         <div class="description-price">
-          <p>Aux zestes d'orange</p>
+          <p class="description">Aux zestes d'orange</p>
           <span class="price">25€</span>
         </div>
       </div>
