order button added

--- a/resto-page.html
+++ b/resto-page.html
@@ -41,6 +41,9 @@
           <span class="price">25€</span>
         </div>
       </div>
+      <div class="order">
+      <button class="btn">Commander</button>
+    </div>
     </div>
 
     <footer>
