--- a/resto-page.html
+++ b/resto-page.html
@@ -35,15 +35,18 @@
 
       <h3>ENTRÉES</h3>
       <div class="card-dish-price">
-        <h4>Tartare de poulpe acidulé</h4>
-        <div class="description-price">
-          <p class="description">Aux zestes d'orange</p>
-          <span class="price">25€</span>
+        <div class="dish-animation">
+          <i class="fa-solid fa-circle-check"></i>
         </div>
+          <h4>Tartare de poulpe acidulé</h4>
+          <div class="description-price">
+            <p class="description">Aux zestes d'orange</p>
+            <span class="price">25€</span>
+          </div>
       </div>
       <div class="order">
-      <button class="btn">Commander</button>
-    </div>
+        <button class="btn">Commander</button>
+      </div>
     </div>
 
     <footer>
