--- a/resto-page.html
+++ b/resto-page.html
@@ -34,7 +34,7 @@
       </div>
 
       <h3>ENTRÉES</h3>
-      <div class="card-dish-price">
+      <div class="card-dish">
         <h4>Tartare de poulpe acidulé</h4>
         <div class="description-price">
           <p class="description">Aux zestes d'orange</p>
