cards added, starters & desserts too

--- a/resto-page.html
+++ b/resto-page.html
@@ -32,18 +32,113 @@
         <h2>À la française</h2>
         <i class="fa-regular fa-heart"></i>
       </div>
-
-      <h3>ENTRÉES</h3>
-      <div class="card-dish">
-        <h4>Tartare de poulpe acidulé</h4>
-        <div class="description-price">
-          <p class="description">Aux zestes d'orange</p>
-          <span class="price">25€</span>
+      <div class="starters">
+        <h3>ENTRÉES</h3>
+        <div class="card-dish">
+          <h4>Tartare de poulpe acidulé</h4>
+          <div class="description-price">
+            <p class="description">Aux zestes d'orange</p>
+            <span class="price">25€</span>
+          </div>
+          <div class="dish-animation">
+            <i class="fa-solid fa-circle-check"></i>
+          </div>
         </div>
-        <div class="dish-animation">
-          <i class="fa-solid fa-circle-check"></i>
+
+        <div class="card-dish">
+          <h4>Velouté de légumes d'antan</h4>
+          <div class="description-price">
+            <p class="description">Carotte, panais, topinambour</p>
+            <span class="price">35€</span>
+          </div>
+          <div class="dish-animation">
+            <i class="fa-solid fa-circle-check"></i>
+          </div>
+        </div>
+
+        <div class="card-dish">
+          <h4>Soupe à l'oignon</h4>
+          <div class="description-price">
+            <p class="description">Revisitée</p>
+            <span class="price">20€</span>
+          </div>
+          <div class="dish-animation">
+            <i class="fa-solid fa-circle-check"></i>
+          </div>
         </div>
       </div>
+      <div class="main-course">
+        <h3>PLATS</h3>
+        <div class="card-dish">
+          <h4>Coquilles Saint-Jacques</h4>
+          <div class="description-price">
+            <p class="description">Accompagnées d'une purée de panais</p>
+            <span class="price">40€</span>
+          </div>
+          <div class="dish-animation">
+            <i class="fa-solid fa-circle-check"></i>
+          </div>
+        </div>
+
+        <div class="card-dish">
+          <h4>Magret de canard</h4>
+          <div class="description-price">
+            <p class="description">Et parmentier de pommes de terre</p>
+            <span class="price">35€</span>
+          </div>
+          <div class="dish-animation">
+            <i class="fa-solid fa-circle-check"></i>
+          </div>
+        </div>
+
+        <div class="card-dish">
+          <h4>Pigeonneau d'Ille-et-Vilaine</h4>
+          <div class="description-price">
+            <p class="description">Sur son lit de gnocchis aux légumes</p>
+            <span class="price">44€</span>
+          </div>
+          <div class="dish-animation">
+            <i class="fa-solid fa-circle-check"></i>
+          </div>
+        </div>
+      </div>
+
+      <div class="desserts">
+        <h3>DESSERTS</h3>
+        <div class="card-dish">
+          <h4>Pétales de violettes glacés</h4>
+          <div class="description-price">
+            <p class="description">Et purée de noisettes</p>
+            <span class="price">18€</span>
+          </div>
+          <div class="dish-animation">
+            <i class="fa-solid fa-circle-check"></i>
+          </div>
+        </div>
+
+        <div class="card-dish">
+          <h4>Fondant au chocolat</h4>
+          <div class="description-price">
+            <p class="description">Revisité</p>
+            <span class="price">22€</span>
+          </div>
+          <div class="dish-animation">
+            <i class="fa-solid fa-circle-check"></i>
+          </div>
+        </div>
+
+        <div class="card-dish">
+          <h4>Millefeuille croustillant</h4>
+          <div class="description-price">
+            <p class="description">Myrtille et pâte d'amande</p>
+            <span class="price">23€</span>
+          </div>
+          <div class="dish-animation">
+            <i class="fa-solid fa-circle-check"></i>
+          </div>
+        </div>
+      </div>
+
       <div class="order">
         <button class="btn">Commander</button>
       </div>
