New insert & box-shadow added

--- a/a-la-francaise.html
+++ b/a-la-francaise.html
@@ -17,7 +17,7 @@
   <body>
     <header>
       <nav>
-        <i class="fa-solid fa-arrow-left"></i>
+       <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
         <h1>ohmyfood</h1>
         <!-- <img src="images/logo/ohmyfood.png" alt="logo ohmyfood"> -->
       </nav>
