--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
             src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
             alt="Fines tranches de saumon et verdure dans assiette en céramique"
           />
+          <div class="new">Nouveau</div>
           <div class="container">
             <div class="resto">
               <h5>La palette du goût</h5>
@@ -74,6 +75,7 @@
             src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
             alt="Boulettes de viande dans assiette en céramique blanche"
           />
+          <div class="new">Nouveau</div>
           <div class="container">
             <div class="resto">
               <h5>La note enchantée</h5>
@@ -82,11 +84,13 @@
             <i class="fa-regular fa-heart"></i>
           </div>
         </div>
+        <a href="a-la-francaise.html">
         <div class="card-resto">
           <img
             src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
             alt="viande crue avec crème et légumes feuillus sur une assiette ronde en céramique blanche"
           />
+          <div class="new">Nouveau</div>
           <div class="container">
             <div class="resto">
               <h5>À la française</h5>
@@ -95,11 +99,14 @@
             <i class="fa-regular fa-heart"></i>
           </div>
         </div>
+      </a>
+
         <div class="card-resto">
           <img
             src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
             alt="poisson servi dans son assiette en forme de barque"
           />
+          <div class="new">Nouveau</div>
           <div class="container">
             <div class="resto">
               <h5>Le délice des sens</h5>
