pages 3 others resto created

--- a/la-note-enchantee.html
+++ b/la-note-enchantee.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="public/css/style.css" />
-    <title>À la française, Restaurant - Ohmyfood by Julien Penna</title>
+    <title>La note enchantée, Restaurant - Ohmyfood by Julien Penna</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
@@ -22,22 +22,22 @@
         <!-- <img src="images/logo/ohmyfood.png" alt="logo ohmyfood"> -->
       </nav>
       <img
-        src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+        src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
         alt="viande crue avec crème et légumes feuillus sur une assiette ronde en céramique blanche"
       />
     </header>
 
     <div class="menu">
       <div class="resto-name-fav">
-        <h2>À la française</h2>
+        <h2>La note enchantée</h2>
         <i class="fa-regular fa-heart"></i>
       </div>
       <div class="starters appearance">
         <h3>ENTRÉES</h3>
         <div class="card-dish appearance dish1">
-          <h4>Tartare de poulpe acidulé</h4>
+          <h4>Ravioles de foie gras</h4>
           <div class="description-price">
-            <p class="description">Aux zestes d'orange</p>
+            <p class="description">Accompagnées de leur crème à la truffe</p>
             <span class="price">25€</span>
           </div>
           <div class="dish-animation">
@@ -46,9 +46,9 @@
         </div>
 
         <div class="card-dish appearance dish2">
-          <h4>Velouté de légumes d'antan</h4>
+          <h4>Caviar osciètre</h4>
           <div class="description-price">
-            <p class="description">Carotte, panais, topinambour</p>
+            <p class="description">Sur blini à la farine de blé noir</p>
             <span class="price">35€</span>
           </div>
           <div class="dish-animation">
@@ -57,10 +57,21 @@
         </div>
 
         <div class="card-dish appearance dish3">
-          <h4>Soupe à l'oignon</h4>
+          <h4>Homard et espuma de chou-fleur</h4>
           <div class="description-price">
-            <p class="description">Revisitée</p>
+            <p class="description">Marinés aux zestes d'orange</p>
             <span class="price">20€</span>
+          </div>
+          <div class="dish-animation">
+            <i class="fa-solid fa-circle-check"></i>
+          </div>
+        </div>
+
+        <div class="card-dish appearance dish4">
+          <h4>Foie gras de canard cuit entier</h4>
+          <div class="description-price">
+            <p class="description">Confiture de figue et pain toasté</p>
+            <span class="price">35€</span>
           </div>
           <div class="dish-animation">
             <i class="fa-solid fa-circle-check"></i>
@@ -70,9 +81,9 @@
       <div class="main-course appearance">
         <h3>PLATS</h3>
         <div class="card-dish appearance dish1">
-          <h4>Coquilles Saint-Jacques</h4>
+          <h4>Noix de coquilles Saint-Jacques</h4>
           <div class="description-price">
-            <p class="description">Accompagnées d'une purée de panais</p>
+            <p class="description">Sur lit de purée et céléri-rave</p>
             <span class="price">40€</span>
           </div>
           <div class="dish-animation">
@@ -81,9 +92,9 @@
         </div>
 
         <div class="card-dish appearance dish2">
-          <h4>Magret de canard</h4>
+          <h4>Langoustine poêlée</h4>
           <div class="description-price">
-            <p class="description">Et parmentier de pommes de terre</p>
+            <p class="description">Et purée de patate douce</p>
             <span class="price">35€</span>
           </div>
           <div class="dish-animation">
@@ -92,9 +103,9 @@
         </div>
 
         <div class="card-dish appearance dish3">
-          <h4>Pigeonneau d'Ille-et-Vilaine</h4>
+          <h4>Mijoté de queue de bœuf</h4>
           <div class="description-price">
-            <p class="description">Sur son lit de gnocchis aux légumes</p>
+            <p class="description">Et riz sauvage aux zestes de citron</p>
             <span class="price">44€</span>
           </div>
           <div class="dish-animation">
@@ -106,9 +117,9 @@
       <div class="desserts appearance">
         <h3>DESSERTS</h3>
         <div class="card-dish appearance dish1">
-          <h4>Pétales de violettes glacés</h4>
+          <h4>Macaron noisette et chocolat</h4>
           <div class="description-price">
-            <p class="description">Et purée de noisettes</p>
+            <p class="description">Glace au caramel brun et sel de Guérande</p>
             <span class="price">18€</span>
           </div>
           <div class="dish-animation">
@@ -117,9 +128,9 @@
         </div>
 
         <div class="card-dish appearance dish2">
-          <h4>Fondant au chocolat</h4>
+          <h4>Baba au rhum revisité</h4>
           <div class="description-price">
-            <p class="description">Revisité</p>
+            <p class="description">Avec son coulis de citron</p>
             <span class="price">22€</span>
           </div>
           <div class="dish-animation">
@@ -128,9 +139,9 @@
         </div>
 
         <div class="card-dish appearance dish3">
-          <h4>Millefeuille croustillant</h4>
+          <h4>Tarte au citron meringuée</h4>
           <div class="description-price">
-            <p class="description">Myrtille et pâte d'amande</p>
+            <p class="description">Destructurée</p>
             <span class="price">23€</span>
           </div>
           <div class="dish-animation">
