--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="public/css/style.css" />
-    <title>À la française, Restaurant - Ohmyfood by Julien Penna</title>
+    <title>La Palette du Goût, Restaurant - Ohmyfood by Julien Penna</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
@@ -22,22 +22,22 @@
         <!-- <img src="images/logo/ohmyfood.png" alt="logo ohmyfood"> -->
       </nav>
       <img
-        src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+        src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
         alt="viande crue avec crème et légumes feuillus sur une assiette ronde en céramique blanche"
       />
     </header>
 
     <div class="menu">
       <div class="resto-name-fav">
-        <h2>À la française</h2>
+        <h2>La palette du goût</h2>
         <i class="fa-regular fa-heart"></i>
       </div>
       <div class="starters appearance">
         <h3>ENTRÉES</h3>
         <div class="card-dish appearance dish1">
-          <h4>Tartare de poulpe acidulé</h4>
+          <h4>Fricassée d'escargots</h4>
           <div class="description-price">
-            <p class="description">Aux zestes d'orange</p>
+            <p class="description">Au piment d'Espelette</p>
             <span class="price">25€</span>
           </div>
           <div class="dish-animation">
@@ -46,9 +46,9 @@
         </div>
 
         <div class="card-dish appearance dish2">
-          <h4>Velouté de légumes d'antan</h4>
+          <h4>Foie gras de canard mi-cuit</h4>
           <div class="description-price">
-            <p class="description">Carotte, panais, topinambour</p>
+            <p class="description">Et ses copeaux de truffe noire</p>
             <span class="price">35€</span>
           </div>
           <div class="dish-animation">
@@ -57,9 +57,9 @@
         </div>
 
         <div class="card-dish appearance dish3">
-          <h4>Soupe à l'oignon</h4>
+          <h4>Œuf au plat</h4>
           <div class="description-price">
-            <p class="description">Revisitée</p>
+            <p class="description">Assaisonné à la truffe sur lit de caviar</p>
             <span class="price">20€</span>
           </div>
           <div class="dish-animation">
@@ -70,9 +70,9 @@
       <div class="main-course appearance">
         <h3>PLATS</h3>
         <div class="card-dish appearance dish1">
-          <h4>Coquilles Saint-Jacques</h4>
+          <h4>Filet de bœuf aux herbes</h4>
           <div class="description-price">
-            <p class="description">Accompagnées d'une purée de panais</p>
+            <p class="description">Accompagné de sa ribambelle de légumes</p>
             <span class="price">40€</span>
           </div>
           <div class="dish-animation">
@@ -81,9 +81,9 @@
         </div>
 
         <div class="card-dish appearance dish2">
-          <h4>Magret de canard</h4>
+          <h4>Parmentier de queue de bœuf</h4>
           <div class="description-price">
-            <p class="description">Et parmentier de pommes de terre</p>
+            <p class="description">À la truffe noire sur sa purée de panais</p>
             <span class="price">35€</span>
           </div>
           <div class="dish-animation">
@@ -92,9 +92,9 @@
         </div>
 
         <div class="card-dish appearance dish3">
-          <h4>Pigeonneau d'Ille-et-Vilaine</h4>
+          <h4>Filet de turbot</h4>
           <div class="description-price">
-            <p class="description">Sur son lit de gnocchis aux légumes</p>
+            <p class="description">Aux agrumes</p>
             <span class="price">44€</span>
           </div>
           <div class="dish-animation">
@@ -106,9 +106,9 @@
       <div class="desserts appearance">
         <h3>DESSERTS</h3>
         <div class="card-dish appearance dish1">
-          <h4>Pétales de violettes glacés</h4>
+          <h4>Paris-Brest</h4>
           <div class="description-price">
-            <p class="description">Et purée de noisettes</p>
+            <p class="description">Revisité</p>
             <span class="price">18€</span>
           </div>
           <div class="dish-animation">
@@ -117,9 +117,9 @@
         </div>
 
         <div class="card-dish appearance dish2">
-          <h4>Fondant au chocolat</h4>
+          <h4>Macaron au chocolat d'exception</h4>
           <div class="description-price">
-            <p class="description">Revisité</p>
+            <p class="description">Et glace à la vanille de Madagascar</p>
             <span class="price">22€</span>
           </div>
           <div class="dish-animation">
@@ -128,9 +128,9 @@
         </div>
 
         <div class="card-dish appearance dish3">
-          <h4>Millefeuille croustillant</h4>
+          <h4>Mousse au chocolat</h4>
           <div class="description-price">
-            <p class="description">Myrtille et pâte d'amande</p>
+            <p class="description">Au piment d'Espelette et à la truffe noire</p>
             <span class="price">23€</span>
           </div>
           <div class="dish-animation">
