--- a/index.html
+++ b/index.html
@@ -115,6 +115,20 @@
         </div>
       </section>
     </main>
+
+    <div class="spinner">
+      <div class="bg-icons">
+        <div class="icons">
+          <img src="images\icons\couverts-icon.png" alt="couverts" />
+          <img
+            src="images\icons\cloche-serveur-icon.png"
+            alt="cloche serveur"
+          />
+          <img src="images\icons\chef-cook.png" alt="toque chef" />
+        </div>
+      </div>
+    </div>
+
     <footer>
       <h6>ohmyfood</h6>
       <a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a>
