loading, hover btn & hearts-fav added

--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -17,7 +17,7 @@
   <body>
     <header>
       <nav>
-       <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
+        <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
         <h1>ohmyfood</h1>
         <!-- <img src="images/logo/ohmyfood.png" alt="logo ohmyfood"> -->
       </nav>
@@ -30,7 +30,10 @@
     <div class="menu">
       <div class="resto-name-fav">
         <h2>La palette du goût</h2>
-        <i class="fa-regular fa-heart"></i>
+        <div class="hearts">
+          <i class="fa-regular fa-heart"></i>
+          <i class="fa-solid fa-heart bg-heart"></i>
+        </div>
       </div>
       <div class="starters appearance">
         <h3>ENTRÉES</h3>
@@ -130,7 +133,9 @@
         <div class="card-dish appearance dish3">
           <h4>Mousse au chocolat</h4>
           <div class="description-price">
-            <p class="description">Au piment d'Espelette et à la truffe noire</p>
+            <p class="description">
+              Au piment d'Espelette et à la truffe noire
+            </p>
             <span class="price">23€</span>
           </div>
           <div class="dish-animation">
