--- a/index.html
+++ b/index.html
@@ -56,63 +56,70 @@
       </section>
       <section class="restaurants">
         <h3>Restaurants</h3>
-        <div class="card-resto">
-          <img
-            src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
-            alt="Fines tranches de saumon et verdure dans assiette en céramique"
-          />
-          <div class="new">Nouveau</div>
-          <div class="container">
-            <div class="resto">
-              <h5>La palette du goût</h5>
-              <p>Ménilmontant</p>
+        <a href="la-palette-du-gout.html"
+          ><div class="card-resto">
+            <img
+              src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+              alt="Fines tranches de saumon et verdure dans assiette en céramique"
+            />
+            <div class="new">Nouveau</div>
+            <div class="container">
+              <div class="resto">
+                <h5>La palette du goût</h5>
+                <p>Ménilmontant</p>
+              </div>
+              <i class="fa-regular fa-heart"></i>
             </div>
-            <i class="fa-regular fa-heart"></i>
           </div>
-        </div>
-        <div class="card-resto">
-          <img
-            src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
-            alt="Boulettes de viande dans assiette en céramique blanche"
-          />
-          <div class="new">Nouveau</div>
-          <div class="container">
-            <div class="resto">
-              <h5>La note enchantée</h5>
-              <p>Charonne</p>
+        </a>
+        <a href="la-note-enchantee.html">
+          <div class="card-resto">
+            <img
+              src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+              alt="Boulettes de viande dans assiette en céramique blanche"
+            />
+            <div class="new">Nouveau</div>
+            <div class="container">
+              <div class="resto">
+                <h5>La note enchantée</h5>
+                <p>Charonne</p>
+              </div>
+              <i class="fa-regular fa-heart"></i>
             </div>
-            <i class="fa-regular fa-heart"></i>
           </div>
-        </div>
-        <a href="a-la-francaise.html">
-        <div class="card-resto">
-          <img
-            src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
-            alt="viande crue avec crème et légumes feuillus sur une assiette ronde en céramique blanche"
-          />
-          <div class="container">
-            <div class="resto">
-              <h5>À la française</h5>
-              <p>Cité Rouge</p>
-            </div>
-            <i class="fa-regular fa-heart"></i>
-          </div>
-        </div>
-      </a>
+        </a>
 
-        <div class="card-resto">
-          <img
-            src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
-            alt="poisson servi dans son assiette en forme de barque"
-          />
-          <div class="container">
-            <div class="resto">
-              <h5>Le délice des sens</h5>
-              <p>Folie-Méricourt</p>
+        <a href="a-la-francaise.html">
+          <div class="card-resto">
+            <img
+              src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+              alt="viande crue avec crème et légumes feuillus sur une assiette ronde en céramique blanche"
+            />
+            <div class="container">
+              <div class="resto">
+                <h5>À la française</h5>
+                <p>Cité Rouge</p>
+              </div>
+              <i class="fa-regular fa-heart"></i>
             </div>
-            <i class="fa-regular fa-heart"></i>
           </div>
-        </div>
+        </a>
+
+        <a href="le-delice-des-sens.html">
+          <div class="card-resto">
+            <img
+              src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+              alt="poisson servi dans son assiette en forme de barque"
+            />
+            <div class="container">
+              <div class="resto">
+                <h5>Le délice des sens</h5>
+                <p>Folie-Méricourt</p>
+              </div>
+              <i class="fa-regular fa-heart"></i>
+            </div>
+          </div>
+        </a>
       </section>
     </main>
 
