heart fav corrected and added on pages

--- a/la-note-enchantee.html
+++ b/la-note-enchantee.html
@@ -31,6 +31,7 @@
       <div class="resto-name-fav">
         <h2>La note enchantée</h2>
         <i class="fa-regular fa-heart"></i>
+        <i class="fa-solid fa-heart bg-heart"></i>
       </div>
       <div class="starters appearance">
         <h3>ENTRÉES</h3>
