--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="public/css/style.css" />
-    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
     <title>Ohmyfood! Paris by Julien Penna</title>
     <link
       rel="stylesheet"
@@ -70,6 +70,7 @@
                 <p>Ménilmontant</p>
               </div>
               <i class="fa-regular fa-heart"></i>
+              <i class="fa-solid fa-heart bg-heart"></i>
             </div>
           </div>
         </a>
@@ -86,6 +87,7 @@
                 <p>Charonne</p>
               </div>
               <i class="fa-regular fa-heart"></i>
+              <i class="fa-solid fa-heart bg-heart"></i>
             </div>
           </div>
         </a>
@@ -102,6 +104,7 @@
                 <p>Cité Rouge</p>
               </div>
               <i class="fa-regular fa-heart"></i>
+              <i class="fa-solid fa-heart bg-heart"></i>
             </div>
           </div>
         </a>
@@ -118,6 +121,7 @@
                 <p>Folie-Méricourt</p>
               </div>
               <i class="fa-regular fa-heart"></i>
+              <i class="fa-solid fa-heart bg-heart"></i>
             </div>
           </div>
         </a>
