--- a/la-note-enchantee.html
+++ b/la-note-enchantee.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="public/css/style.css" />
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
     <title>La note enchantée, Restaurant - Ohmyfood by Julien Penna</title>
     <link
       rel="stylesheet"
@@ -163,7 +164,7 @@
         ><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</a
       >
       <a href="#">Mentions légales</a>
-      <a href="#">Contact</a>
+      <a href="mailto:contact@ohmyfood.com">Contact</a>
     </footer>
   </body>
 </html>
