responsive tablet explore operation

--- a/index.html
+++ b/index.html
@@ -21,20 +21,18 @@
         <h1>ohmyfood</h1>
       </nav>
       <!-- <img src="images/logo/ohmyfood.png" alt="logo ohmyfood"> -->
-      <!-- START Section LOCALIZATION -->
       <div class="localization">
         <h2><i class="fa-solid fa-location-dot"></i>Paris, Belleville</h2>
       </div>
-      <div class="explore">
+    </header>
+    <div class="explore-opeation">
+      <section class="explore">
         <h3>Réservez le menu qui vous convient</h3>
         <p>
           Découvrez des restaurants d'exception, sélectionnés par nos soins.
         </p>
         <button class="btn">Explorez nos restaurants</button>
-      </div>
-      <!-- END Section LOCALIZATION -->
-    </header>
-    <main>
+      </section>    
       <section class="operation">
         <h3>Fonctionnement</h3>
         <div class="steps">
@@ -55,6 +53,8 @@
           </div>
         </div>
       </section>
+    </div>
+    <main>
       <section class="restaurants">
         <h3>Restaurants</h3>
         <a href="la-palette-du-gout.html"
