--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           Découvrez des restaurants d'exception, sélectionnés par nos soins.
         </p>
         <button class="btn">Explorez nos restaurants</button>
-      </section>    
+      </section>
       <section class="operation">
         <h3>Fonctionnement</h3>
         <div class="steps">
@@ -57,74 +57,84 @@
     <main>
       <section class="restaurants">
         <h3>Restaurants</h3>
-        <a href="la-palette-du-gout.html"
-          ><div class="card-resto">
-            <img
-              src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
-              alt="Fines tranches de saumon et verdure dans assiette en céramique"
-            />
-            <div class="new">Nouveau</div>
-            <div class="container">
-              <div class="resto">
-                <h5>La palette du goût</h5>
-                <p>Ménilmontant</p>
+        <div class="grid-restos">
+          <a href="la-palette-du-gout.html"
+            ><div class="card-resto">
+              <img
+                src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                alt="Fines tranches de saumon et verdure dans assiette en céramique"
+              />
+              <div class="new">Nouveau</div>
+              <div class="container">
+                <div class="resto-place-fav">
+                  <div class="resto">
+                    <h5>La palette du goût</h5>
+                    <p>Ménilmontant</p>
+                  </div>
+                  <i class="fa-regular fa-heart"></i>
+                  <i class="fa-solid fa-heart bg-heart"></i>
+                </div>
               </div>
-              <i class="fa-regular fa-heart"></i>
-              <i class="fa-solid fa-heart bg-heart"></i>
             </div>
-          </div>
-        </a>
-        <a href="la-note-enchantee.html">
-          <div class="card-resto">
-            <img
-              src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
-              alt="Boulettes de viande dans assiette en céramique blanche"
-            />
-            <div class="new">Nouveau</div>
-            <div class="container">
-              <div class="resto">
-                <h5>La note enchantée</h5>
-                <p>Charonne</p>
+          </a>
+          <a href="la-note-enchantee.html">
+            <div class="card-resto">
+              <img
+                src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+                alt="Boulettes de viande dans assiette en céramique blanche"
+              />
+              <div class="new">Nouveau</div>
+              <div class="container">
+                <div class="resto-place-fav">
+                <div class="resto">
+                  <h5>La note enchantée</h5>
+                  <p>Charonne</p>
+                </div>
+                <i class="fa-regular fa-heart"></i>
+                <i class="fa-solid fa-heart bg-heart"></i>
               </div>
-              <i class="fa-regular fa-heart"></i>
-              <i class="fa-solid fa-heart bg-heart"></i>
             </div>
-          </div>
-        </a>
+            </div>
+          </a>
 
-        <a href="a-la-francaise.html">
-          <div class="card-resto">
-            <img
-              src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
-              alt="viande crue avec crème et légumes feuillus sur une assiette ronde en céramique blanche"
-            />
-            <div class="container">
-              <div class="resto">
-                <h5>À la française</h5>
-                <p>Cité Rouge</p>
+          <a href="a-la-francaise.html">
+            <div class="card-resto">
+              <img
+                src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+                alt="viande crue avec crème et légumes feuillus sur une assiette ronde en céramique blanche"
+              />
+              <div class="container">
+                <div class="resto-place-fav">
+                <div class="resto">
+                  <h5>À la française</h5>
+                  <p>Cité Rouge</p>
+                </div>
+                <i class="fa-regular fa-heart"></i>
+                <i class="fa-solid fa-heart bg-heart"></i>
               </div>
-              <i class="fa-regular fa-heart"></i>
-              <i class="fa-solid fa-heart bg-heart"></i>
             </div>
-          </div>
-        </a>
+            </div>
+          </a>
 
-        <a href="le-delice-des-sens.html">
-          <div class="card-resto">
-            <img
-              src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
-              alt="poisson servi dans son assiette en forme de barque"
-            />
-            <div class="container">
-              <div class="resto">
-                <h5>Le délice des sens</h5>
-                <p>Folie-Méricourt</p>
+          <a href="le-delice-des-sens.html">
+            <div class="card-resto">
+              <img
+                src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                alt="poisson servi dans son assiette en forme de barque"
+              />
+              <div class="container">
+                <div class="resto-place-fav">
+                <div class="resto">
+                  <h5>Le délice des sens</h5>
+                  <p>Folie-Méricourt</p>
+                </div>
+                <i class="fa-regular fa-heart"></i>
+                <i class="fa-solid fa-heart bg-heart"></i>
               </div>
-              <i class="fa-regular fa-heart"></i>
-              <i class="fa-solid fa-heart bg-heart"></i>
             </div>
           </div>
-        </a>
+          </a>
+        </div>
       </section>
     </main>
 
