--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -31,118 +31,123 @@
     <div class="menu">
       <div class="resto-name-fav">
         <h2>La palette du goût</h2>
-          <i class="fa-regular fa-heart"></i>
-          <i class="fa-solid fa-heart bg-heart"></i>
+        <i class="fa-regular fa-heart"></i>
+        <i class="fa-solid fa-heart bg-heart"></i>
       </div>
-      <div class="starters appearance">
-        <h3>ENTRÉES</h3>
-        <div class="card-dish appearance dish1">
-          <h4>Fricassée d'escargots</h4>
-          <div class="description-price">
-            <p class="description">Au piment d'Espelette</p>
-            <span class="price">25€</span>
+      <div class="dishes">
+        <div class="starters appearance">
+          <h3>ENTRÉES</h3>
+          <div class="card-dish appearance dish1">
+            <h4>Fricassée d'escargots</h4>
+            <div class="description-price">
+              <p class="description">Au piment d'Espelette</p>
+              <span class="price">25€</span>
+            </div>
+            <div class="dish-animation">
+              <i class="fa-solid fa-circle-check"></i>
+            </div>
           </div>
-          <div class="dish-animation">
-            <i class="fa-solid fa-circle-check"></i>
+
+          <div class="card-dish appearance dish2">
+            <h4>Foie gras de canard mi-cuit</h4>
+            <div class="description-price">
+              <p class="description">Et ses copeaux de truffe noire</p>
+              <span class="price">35€</span>
+            </div>
+            <div class="dish-animation">
+              <i class="fa-solid fa-circle-check"></i>
+            </div>
+          </div>
+
+          <div class="card-dish appearance dish3">
+            <h4>Œuf au plat</h4>
+            <div class="description-price">
+              <p class="description">
+                Assaisonné à la truffe sur lit de caviar
+              </p>
+              <span class="price">20€</span>
+            </div>
+            <div class="dish-animation">
+              <i class="fa-solid fa-circle-check"></i>
+            </div>
+          </div>
+        </div>
+        <div class="main-course appearance">
+          <h3>PLATS</h3>
+          <div class="card-dish appearance dish1">
+            <h4>Filet de bœuf aux herbes</h4>
+            <div class="description-price">
+              <p class="description">Accompagné de sa ribambelle de légumes</p>
+              <span class="price">40€</span>
+            </div>
+            <div class="dish-animation">
+              <i class="fa-solid fa-circle-check"></i>
+            </div>
+          </div>
+
+          <div class="card-dish appearance dish2">
+            <h4>Parmentier de queue de bœuf</h4>
+            <div class="description-price">
+              <p class="description">
+                À la truffe noire sur sa purée de panais
+              </p>
+              <span class="price">35€</span>
+            </div>
+            <div class="dish-animation">
+              <i class="fa-solid fa-circle-check"></i>
+            </div>
+          </div>
+
+          <div class="card-dish appearance dish3">
+            <h4>Filet de turbot</h4>
+            <div class="description-price">
+              <p class="description">Aux agrumes</p>
+              <span class="price">44€</span>
+            </div>
+            <div class="dish-animation">
+              <i class="fa-solid fa-circle-check"></i>
+            </div>
           </div>
         </div>
 
-        <div class="card-dish appearance dish2">
-          <h4>Foie gras de canard mi-cuit</h4>
-          <div class="description-price">
-            <p class="description">Et ses copeaux de truffe noire</p>
-            <span class="price">35€</span>
+        <div class="desserts appearance">
+          <h3>DESSERTS</h3>
+          <div class="card-dish appearance dish1">
+            <h4>Paris-Brest</h4>
+            <div class="description-price">
+              <p class="description">Revisité</p>
+              <span class="price">18€</span>
+            </div>
+            <div class="dish-animation">
+              <i class="fa-solid fa-circle-check"></i>
+            </div>
           </div>
-          <div class="dish-animation">
-            <i class="fa-solid fa-circle-check"></i>
-          </div>
-        </div>
 
-        <div class="card-dish appearance dish3">
-          <h4>Œuf au plat</h4>
-          <div class="description-price">
-            <p class="description">Assaisonné à la truffe sur lit de caviar</p>
-            <span class="price">20€</span>
+          <div class="card-dish appearance dish2">
+            <h4>Macaron au chocolat d'exception</h4>
+            <div class="description-price">
+              <p class="description">Et glace à la vanille de Madagascar</p>
+              <span class="price">22€</span>
+            </div>
+            <div class="dish-animation">
+              <i class="fa-solid fa-circle-check"></i>
+            </div>
           </div>
-          <div class="dish-animation">
-            <i class="fa-solid fa-circle-check"></i>
+
+          <div class="card-dish appearance dish3">
+            <h4>Mousse au chocolat</h4>
+            <div class="description-price">
+              <p class="description">
+                Au piment d'Espelette et à la truffe noire
+              </p>
+              <span class="price">23€</span>
+            </div>
+            <div class="dish-animation">
+              <i class="fa-solid fa-circle-check"></i>
+            </div>
           </div>
         </div>
       </div>
-      <div class="main-course appearance">
-        <h3>PLATS</h3>
-        <div class="card-dish appearance dish1">
-          <h4>Filet de bœuf aux herbes</h4>
-          <div class="description-price">
-            <p class="description">Accompagné de sa ribambelle de légumes</p>
-            <span class="price">40€</span>
-          </div>
-          <div class="dish-animation">
-            <i class="fa-solid fa-circle-check"></i>
-          </div>
-        </div>
-
-        <div class="card-dish appearance dish2">
-          <h4>Parmentier de queue de bœuf</h4>
-          <div class="description-price">
-            <p class="description">À la truffe noire sur sa purée de panais</p>
-            <span class="price">35€</span>
-          </div>
-          <div class="dish-animation">
-            <i class="fa-solid fa-circle-check"></i>
-          </div>
-        </div>
-
-        <div class="card-dish appearance dish3">
-          <h4>Filet de turbot</h4>
-          <div class="description-price">
-            <p class="description">Aux agrumes</p>
-            <span class="price">44€</span>
-          </div>
-          <div class="dish-animation">
-            <i class="fa-solid fa-circle-check"></i>
-          </div>
-        </div>
-      </div>
-
-      <div class="desserts appearance">
-        <h3>DESSERTS</h3>
-        <div class="card-dish appearance dish1">
-          <h4>Paris-Brest</h4>
-          <div class="description-price">
-            <p class="description">Revisité</p>
-            <span class="price">18€</span>
-          </div>
-          <div class="dish-animation">
-            <i class="fa-solid fa-circle-check"></i>
-          </div>
-        </div>
-
-        <div class="card-dish appearance dish2">
-          <h4>Macaron au chocolat d'exception</h4>
-          <div class="description-price">
-            <p class="description">Et glace à la vanille de Madagascar</p>
-            <span class="price">22€</span>
-          </div>
-          <div class="dish-animation">
-            <i class="fa-solid fa-circle-check"></i>
-          </div>
-        </div>
-
-        <div class="card-dish appearance dish3">
-          <h4>Mousse au chocolat</h4>
-          <div class="description-price">
-            <p class="description">
-              Au piment d'Espelette et à la truffe noire
-            </p>
-            <span class="price">23€</span>
-          </div>
-          <div class="dish-animation">
-            <i class="fa-solid fa-circle-check"></i>
-          </div>
-        </div>
-      </div>
-
       <div class="order">
         <button class="btn">Commander</button>
       </div>
