logo img in comm + .dishes pages OK

--- a/a-la-francaise.html
+++ b/a-la-francaise.html
@@ -19,8 +19,8 @@
     <header>
       <nav>
        <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
-        <h1>ohmyfood</h1>
-        <!-- <img src="images/logo/ohmyfood.png" alt="logo ohmyfood"> -->
+       <a href="index.html"><h1>ohmyfood</h1></a>
+       <!-- <a href="index.html"><img src="images/logo/ohmyfood.png" alt="logo ohmyfood" class="logo"></a> -->
       </nav>
       <img
         src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
@@ -34,6 +34,8 @@
         <i class="fa-regular fa-heart"></i>
         <i class="fa-solid fa-heart bg-heart"></i>
       </div>
+
+      <div class="dishes">
       <div class="starters appearance">
         <h3>ENTRÉES</h3>
         <div class="card-dish appearance dish1">
@@ -139,6 +141,7 @@
             <i class="fa-solid fa-circle-check"></i>
           </div>
         </div>
+      </div>
       </div>
 
       <div class="order">
