--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
   <body>
     <header>
       <nav>
-        <h1>ohmyfood</h1>
+        <!-- <h1>ohmyfood</h1> -->
+      <img src="images/logo/ohmyfood.png" alt="logo ohmyfood" class="logo">
       </nav>
-      <!-- <img src="images/logo/ohmyfood.png" alt="logo ohmyfood"> -->
       <div class="localization">
         <h2><i class="fa-solid fa-location-dot"></i>Paris, Belleville</h2>
       </div>
