--- a/le-delice-des-sens.html
+++ b/le-delice-des-sens.html
@@ -18,9 +18,9 @@
   <body>
     <header>
       <nav>
-       <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
-        <h1>ohmyfood</h1>
-        <!-- <img src="images/logo/ohmyfood.png" alt="logo ohmyfood"> -->
+        <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
+        <a href="index.html"><h1>ohmyfood</h1></a>
+        <!-- <a href="index.html"><img src="images/logo/ohmyfood.png" alt="logo ohmyfood" class="logo"></a> -->
       </nav>
       <img
         src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
@@ -34,113 +34,115 @@
         <i class="fa-regular fa-heart"></i>
         <i class="fa-solid fa-heart bg-heart"></i>
       </div>
-      <div class="starters appearance">
-        <h3>ENTRÉES</h3>
-        <div class="card-dish appearance dish1">
-          <h4>Tartare de thon</h4>
-          <div class="description-price">
-            <p class="description">Assaisonné au yuzu</p>
-            <span class="price">25€</span>
+
+      <div class="dishes">
+        <div class="starters appearance">
+          <h3>ENTRÉES</h3>
+          <div class="card-dish appearance dish1">
+            <h4>Tartare de thon</h4>
+            <div class="description-price">
+              <p class="description">Assaisonné au yuzu</p>
+              <span class="price">25€</span>
+            </div>
+            <div class="dish-animation">
+              <i class="fa-solid fa-circle-check"></i>
+            </div>
           </div>
-          <div class="dish-animation">
-            <i class="fa-solid fa-circle-check"></i>
+
+          <div class="card-dish appearance dish2">
+            <h4>Bouchée de homard croustillant</h4>
+            <div class="description-price">
+              <p class="description">Et sa farandole de petits légumes</p>
+              <span class="price">35€</span>
+            </div>
+            <div class="dish-animation">
+              <i class="fa-solid fa-circle-check"></i>
+            </div>
+          </div>
+
+          <div class="card-dish appearance dish3">
+            <h4>Velouté de cèpes</h4>
+            <div class="description-price">
+              <p class="description">Aux truffes</p>
+              <span class="price">20€</span>
+            </div>
+            <div class="dish-animation">
+              <i class="fa-solid fa-circle-check"></i>
+            </div>
+          </div>
+        </div>
+        <div class="main-course appearance">
+          <h3>PLATS</h3>
+          <div class="card-dish appearance dish1">
+            <h4>Poulet rôti aux herbes de Provence</h4>
+            <div class="description-price">
+              <p class="description">Et sa crème de truffe</p>
+              <span class="price">40€</span>
+            </div>
+            <div class="dish-animation">
+              <i class="fa-solid fa-circle-check"></i>
+            </div>
+          </div>
+
+          <div class="card-dish appearance dish2">
+            <h4>Langouste rôtie</h4>
+            <div class="description-price">
+              <p class="description">Et ses légumes de saison</p>
+              <span class="price">35€</span>
+            </div>
+            <div class="dish-animation">
+              <i class="fa-solid fa-circle-check"></i>
+            </div>
+          </div>
+
+          <div class="card-dish appearance dish3">
+            <h4>Côte de bœuf Angus</h4>
+            <div class="description-price">
+              <p class="description">Et sa purée de panais</p>
+              <span class="price">44€</span>
+            </div>
+            <div class="dish-animation">
+              <i class="fa-solid fa-circle-check"></i>
+            </div>
           </div>
         </div>
 
-        <div class="card-dish appearance dish2">
-          <h4>Bouchée de homard croustillant</h4>
-          <div class="description-price">
-            <p class="description">Et sa farandole de petits légumes</p>
-            <span class="price">35€</span>
+        <div class="desserts appearance">
+          <h3>DESSERTS</h3>
+          <div class="card-dish appearance dish1">
+            <h4>Farandole de desserts</h4>
+            <div class="description-price">
+              <p class="description">Du chef</p>
+              <span class="price">18€</span>
+            </div>
+            <div class="dish-animation">
+              <i class="fa-solid fa-circle-check"></i>
+            </div>
           </div>
-          <div class="dish-animation">
-            <i class="fa-solid fa-circle-check"></i>
-          </div>
-        </div>
 
-        <div class="card-dish appearance dish3">
-          <h4>Velouté de cèpes</h4>
-          <div class="description-price">
-            <p class="description">Aux truffes</p>
-            <span class="price">20€</span>
+          <div class="card-dish appearance dish2">
+            <h4>Crème brûlée</h4>
+            <div class="description-price">
+              <p class="description">Revisitée</p>
+              <span class="price">22€</span>
+            </div>
+            <div class="dish-animation">
+              <i class="fa-solid fa-circle-check"></i>
+            </div>
           </div>
-          <div class="dish-animation">
-            <i class="fa-solid fa-circle-check"></i>
+
+          <div class="card-dish appearance dish3">
+            <h4>Tiramisu</h4>
+            <div class="description-price">
+              <p class="description">À la noisette</p>
+              <span class="price">23€</span>
+            </div>
+            <div class="dish-animation">
+              <i class="fa-solid fa-circle-check"></i>
+            </div>
           </div>
         </div>
       </div>
-      <div class="main-course appearance">
-        <h3>PLATS</h3>
-        <div class="card-dish appearance dish1">
-          <h4>Poulet rôti aux herbes de Provence</h4>
-          <div class="description-price">
-            <p class="description">Et sa crème de truffe</p>
-            <span class="price">40€</span>
-          </div>
-          <div class="dish-animation">
-            <i class="fa-solid fa-circle-check"></i>
-          </div>
-        </div>
-
-        <div class="card-dish appearance dish2">
-          <h4>Langouste rôtie</h4>
-          <div class="description-price">
-            <p class="description">Et ses légumes de saison</p>
-            <span class="price">35€</span>
-          </div>
-          <div class="dish-animation">
-            <i class="fa-solid fa-circle-check"></i>
-          </div>
-        </div>
-
-        <div class="card-dish appearance dish3">
-          <h4>Côte de bœuf Angus</h4>
-          <div class="description-price">
-            <p class="description">Et sa purée de panais</p>
-            <span class="price">44€</span>
-          </div>
-          <div class="dish-animation">
-            <i class="fa-solid fa-circle-check"></i>
-          </div>
-        </div>
-      </div>
-
-      <div class="desserts appearance">
-        <h3>DESSERTS</h3>
-        <div class="card-dish appearance dish1">
-          <h4>Farandole de desserts</h4>
-          <div class="description-price">
-            <p class="description">Du chef</p>
-            <span class="price">18€</span>
-          </div>
-          <div class="dish-animation">
-            <i class="fa-solid fa-circle-check"></i>
-          </div>
-        </div>
-
-        <div class="card-dish appearance dish2">
-          <h4>Crème brûlée</h4>
-          <div class="description-price">
-            <p class="description">Revisitée</p>
-            <span class="price">22€</span>
-          </div>
-          <div class="dish-animation">
-            <i class="fa-solid fa-circle-check"></i>
-          </div>
-        </div>
-
-        <div class="card-dish appearance dish3">
-          <h4>Tiramisu</h4>
-          <div class="description-price">
-            <p class="description">À la noisette</p>
-            <span class="price">23€</span>
-          </div>
-          <div class="dish-animation">
-            <i class="fa-solid fa-circle-check"></i>
-          </div>
-        </div>
-      </div>
-
       <div class="order">
         <button class="btn">Commander</button>
       </div>
