--- a/la-note-enchantee.html
+++ b/la-note-enchantee.html
@@ -18,9 +18,9 @@
   <body>
     <header>
       <nav>
-       <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
-        <h1>ohmyfood</h1>
-        <!-- <img src="images/logo/ohmyfood.png" alt="logo ohmyfood"> -->
+        <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
+        <a href="index.html"><h1>ohmyfood</h1></a>
+        <!-- <a href="index.html"><img src="images/logo/ohmyfood.png" alt="logo ohmyfood" class="logo"></a> -->
       </nav>
       <img
         src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
@@ -34,124 +34,128 @@
         <i class="fa-regular fa-heart"></i>
         <i class="fa-solid fa-heart bg-heart"></i>
       </div>
-      <div class="starters appearance">
-        <h3>ENTRÉES</h3>
-        <div class="card-dish appearance dish1">
-          <h4>Ravioles de foie gras</h4>
-          <div class="description-price">
-            <p class="description">Accompagnées de leur crème à la truffe</p>
-            <span class="price">25€</span>
+
+      <div class="dishes">
+        <div class="starters appearance">
+          <h3>ENTRÉES</h3>
+          <div class="card-dish appearance dish1">
+            <h4>Ravioles de foie gras</h4>
+            <div class="description-price">
+              <p class="description">Accompagnées de leur crème à la truffe</p>
+              <span class="price">25€</span>
+            </div>
+            <div class="dish-animation">
+              <i class="fa-solid fa-circle-check"></i>
+            </div>
           </div>
-          <div class="dish-animation">
-            <i class="fa-solid fa-circle-check"></i>
+
+          <div class="card-dish appearance dish2">
+            <h4>Caviar osciètre</h4>
+            <div class="description-price">
+              <p class="description">Sur blini à la farine de blé noir</p>
+              <span class="price">35€</span>
+            </div>
+            <div class="dish-animation">
+              <i class="fa-solid fa-circle-check"></i>
+            </div>
+          </div>
+
+          <div class="card-dish appearance dish3">
+            <h4>Homard et espuma de chou-fleur</h4>
+            <div class="description-price">
+              <p class="description">Marinés aux zestes d'orange</p>
+              <span class="price">20€</span>
+            </div>
+            <div class="dish-animation">
+              <i class="fa-solid fa-circle-check"></i>
+            </div>
+          </div>
+
+          <div class="card-dish appearance dish4">
+            <h4>Foie gras de canard cuit entier</h4>
+            <div class="description-price">
+              <p class="description">Confiture de figue et pain toasté</p>
+              <span class="price">35€</span>
+            </div>
+            <div class="dish-animation">
+              <i class="fa-solid fa-circle-check"></i>
+            </div>
+          </div>
+        </div>
+        <div class="main-course appearance">
+          <h3>PLATS</h3>
+          <div class="card-dish appearance dish1">
+            <h4>Noix de coquilles Saint-Jacques</h4>
+            <div class="description-price">
+              <p class="description">Sur lit de purée et céléri-rave</p>
+              <span class="price">40€</span>
+            </div>
+            <div class="dish-animation">
+              <i class="fa-solid fa-circle-check"></i>
+            </div>
+          </div>
+
+          <div class="card-dish appearance dish2">
+            <h4>Langoustine poêlée</h4>
+            <div class="description-price">
+              <p class="description">Et purée de patate douce</p>
+              <span class="price">35€</span>
+            </div>
+            <div class="dish-animation">
+              <i class="fa-solid fa-circle-check"></i>
+            </div>
+          </div>
+
+          <div class="card-dish appearance dish3">
+            <h4>Mijoté de queue de bœuf</h4>
+            <div class="description-price">
+              <p class="description">Et riz sauvage aux zestes de citron</p>
+              <span class="price">44€</span>
+            </div>
+            <div class="dish-animation">
+              <i class="fa-solid fa-circle-check"></i>
+            </div>
           </div>
         </div>
 
-        <div class="card-dish appearance dish2">
-          <h4>Caviar osciètre</h4>
-          <div class="description-price">
-            <p class="description">Sur blini à la farine de blé noir</p>
-            <span class="price">35€</span>
+        <div class="desserts appearance">
+          <h3>DESSERTS</h3>
+          <div class="card-dish appearance dish1">
+            <h4>Macaron noisette et chocolat</h4>
+            <div class="description-price">
+              <p class="description">
+                Glace au caramel brun et sel de Guérande
+              </p>
+              <span class="price">18€</span>
+            </div>
+            <div class="dish-animation">
+              <i class="fa-solid fa-circle-check"></i>
+            </div>
           </div>
-          <div class="dish-animation">
-            <i class="fa-solid fa-circle-check"></i>
-          </div>
-        </div>
 
-        <div class="card-dish appearance dish3">
-          <h4>Homard et espuma de chou-fleur</h4>
-          <div class="description-price">
-            <p class="description">Marinés aux zestes d'orange</p>
-            <span class="price">20€</span>
+          <div class="card-dish appearance dish2">
+            <h4>Baba au rhum revisité</h4>
+            <div class="description-price">
+              <p class="description">Avec son coulis de citron</p>
+              <span class="price">22€</span>
+            </div>
+            <div class="dish-animation">
+              <i class="fa-solid fa-circle-check"></i>
+            </div>
           </div>
-          <div class="dish-animation">
-            <i class="fa-solid fa-circle-check"></i>
-          </div>
-        </div>
 
-        <div class="card-dish appearance dish4">
-          <h4>Foie gras de canard cuit entier</h4>
-          <div class="description-price">
-            <p class="description">Confiture de figue et pain toasté</p>
-            <span class="price">35€</span>
-          </div>
-          <div class="dish-animation">
-            <i class="fa-solid fa-circle-check"></i>
+          <div class="card-dish appearance dish3">
+            <h4>Tarte au citron meringuée</h4>
+            <div class="description-price">
+              <p class="description">Destructurée</p>
+              <span class="price">23€</span>
+            </div>
+            <div class="dish-animation">
+              <i class="fa-solid fa-circle-check"></i>
+            </div>
           </div>
         </div>
       </div>
-      <div class="main-course appearance">
-        <h3>PLATS</h3>
-        <div class="card-dish appearance dish1">
-          <h4>Noix de coquilles Saint-Jacques</h4>
-          <div class="description-price">
-            <p class="description">Sur lit de purée et céléri-rave</p>
-            <span class="price">40€</span>
-          </div>
-          <div class="dish-animation">
-            <i class="fa-solid fa-circle-check"></i>
-          </div>
-        </div>
-
-        <div class="card-dish appearance dish2">
-          <h4>Langoustine poêlée</h4>
-          <div class="description-price">
-            <p class="description">Et purée de patate douce</p>
-            <span class="price">35€</span>
-          </div>
-          <div class="dish-animation">
-            <i class="fa-solid fa-circle-check"></i>
-          </div>
-        </div>
-
-        <div class="card-dish appearance dish3">
-          <h4>Mijoté de queue de bœuf</h4>
-          <div class="description-price">
-            <p class="description">Et riz sauvage aux zestes de citron</p>
-            <span class="price">44€</span>
-          </div>
-          <div class="dish-animation">
-            <i class="fa-solid fa-circle-check"></i>
-          </div>
-        </div>
-      </div>
-
-      <div class="desserts appearance">
-        <h3>DESSERTS</h3>
-        <div class="card-dish appearance dish1">
-          <h4>Macaron noisette et chocolat</h4>
-          <div class="description-price">
-            <p class="description">Glace au caramel brun et sel de Guérande</p>
-            <span class="price">18€</span>
-          </div>
-          <div class="dish-animation">
-            <i class="fa-solid fa-circle-check"></i>
-          </div>
-        </div>
-
-        <div class="card-dish appearance dish2">
-          <h4>Baba au rhum revisité</h4>
-          <div class="description-price">
-            <p class="description">Avec son coulis de citron</p>
-            <span class="price">22€</span>
-          </div>
-          <div class="dish-animation">
-            <i class="fa-solid fa-circle-check"></i>
-          </div>
-        </div>
-
-        <div class="card-dish appearance dish3">
-          <h4>Tarte au citron meringuée</h4>
-          <div class="description-price">
-            <p class="description">Destructurée</p>
-            <span class="price">23€</span>
-          </div>
-          <div class="dish-animation">
-            <i class="fa-solid fa-circle-check"></i>
-          </div>
-        </div>
-      </div>
-
       <div class="order">
         <button class="btn">Commander</button>
       </div>
