--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -19,8 +19,8 @@
     <header>
       <nav>
         <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
-        <h1>ohmyfood</h1>
-        <!-- <img src="images/logo/ohmyfood.png" alt="logo ohmyfood"> -->
+        <a href="index.html"><h1>ohmyfood</h1></a>
+        <!-- <a href="index.html"><img src="images/logo/ohmyfood.png" alt="logo ohmyfood" class="logo"></a> -->
       </nav>
       <img
         src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
