pattern sass & responsive desktop changed

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <h2><i class="fa-solid fa-location-dot"></i>Paris, Belleville</h2>
       </div>
     </header>
-    <div class="explore-opeation">
+    <div class="explore-operation">
       <section class="explore">
         <h3>Réservez le menu qui vous convient</h3>
         <p>
